Add assertions to TreeBuildingTest